# sortify

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: classify.rs  cli.rs  detect.rs  main.rs  ops.rs  prompt.rs
src/updater/: github.rs  mod.rs  platform_check.rs
